--- a/training/index.css
+++ b/training/index.css
@@ -14,11 +14,49 @@ html, body {
 
 }
 
+.header__wrapper {
+  width: 100%;
+  height: 5%;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  align-items: center;
+  background-color: white;
+  border: 1px solid black; 
+}
+
+.logo {
+  text-align: left;
+  color: orange;
+  font-weight: 700;
+}
+
+.link {
+  font-size: 10px;
+  margin: 0px 10px;
+}
+
+
+.img {
+  width: 2.5%;
+  height: 60%;
+}
+img {
+  width: 100%;
+  height: 100%;
+}
+
+
 .wrapper {
   margin : 0px auto;
   padding: 50px;
   width: 75%;
 }
+
+
+
+
+
 
 .wrapper__wrapper {
   padding: 50px;
