--- a/training-02/index.css
+++ b/training-02/index.css
@@ -58,6 +58,20 @@ container {
   margin-bottom: 20px;
 }
 
+.menu {
+  padding: 7px;
+  width: 100%;
+  border-radius: 10px;
+  transition: background-color 1s ease-in-out 0.5s;
+  transition: transform 1s ease-in-out;
+
+}
+
+.menu:hover {
+  background-color: #df941a;
+  transform: translateX(7px);
+}
+
 .admin {
   background-color: black;
   color: white;
@@ -68,6 +82,17 @@ container {
   align-items: center;
   padding-left: 20px;
   font-weight: 100;
+}
+
+.admin:hover {
+  background-color: white;
+  color: black;
+  border: 1px solid black;
+
+}
+
+.admin .dash:hover {
+  transform: translateX(100px);
 }
 
 
@@ -84,7 +109,7 @@ container {
 }
 
 .body {
-  width: 23%;
+  width: 24%;
   height: 32%;
   background-size: cover;
   background-repeat: no-repeat;
@@ -102,4 +127,9 @@ container {
 
 .body3 {
   background-image: url('./img/item3.jpeg');
+}
+
+.body1:hover {
+  filter: blur(8px);
+  -webkit-filter: blur(8px);
 }
