--- a/my-shop/index.css
+++ b/my-shop/index.css
@@ -64,7 +64,7 @@ container {
   border-radius: 10px;
   transition: background-color 1s ease-in-out 0.5s;
   transition: transform 1s ease-in-out;
-
+  font-size: 5px;
 }
 
 .menu:hover {
@@ -82,17 +82,23 @@ container {
   align-items: center;
   padding-left: 20px;
   font-weight: 100;
+  font-size: 10px;
+  transition: backgroundcolor, color, border 1s ease-in-out;
 }
 
 .admin:hover {
   background-color: white;
   color: black;
   border: 1px solid black;
-
+  
 }
 
-.admin .dash:hover {
-  transform: translateX(100px);
+.admin:hover .dash{
+  transform: translateX(18px);
+}
+
+.dash {
+  transition: transform 0.5s ease-in-out;
 }
 
 
@@ -100,36 +106,104 @@ container {
   width: 100%;
   height: 100%;
   margin-left: 10px;
+  margin-bottom: 10px;
   display: flex;
-  flex-direction: row;
   flex-wrap: wrap;
+  flex-direction: row;
   justify-content: space-between;
-  align-content: space-between;
-
+  align-items: flex-start;
 }
 
-.body {
-  width: 24%;
-  height: 32%;
-  background-size: cover;
-  background-repeat: no-repeat;
+.item {
+  width: calc(25% - 7px);
+  aspect-ratio: 6 / 5;
+  position: relative;
+  overflow: hidden;
   border-radius: 10px;
-  
+  margin-bottom: 15px;
 }
 
-.body1 {
-  background-image: url('./img/item1.jpeg');
+.imgBox {
+  width: 100%;
+  height: 100%;
 }
 
-.body2 {
-  background-image: url('./img/item2.png');
+.imgBox img {
+  width: 100%;
+  height: 100%;
 }
 
-.body3 {
-  background-image: url('./img/item3.jpeg');
+.textBox {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+  align-items: flex-start;
+  padding: 20px;
+  z-index: 3;
 }
 
-.body1:hover {
-  filter: blur(8px);
-  -webkit-filter: blur(8px);
+.textBox p {
+  color: white;
+  margin: 5px 0 0 ;
+}
+
+.textBox__name {
+  font-size: 20px;
+  font-weight: 500;
+  opacity: 0;
+  transform: translateY(50px);
+}
+
+.textBox__price {
+  font-size: 13px;
+  font-weight: 400;
+  opacity: 0;
+  transform: translateY(50px);
+}
+
+.item:after {
+  content: "";
+  display: block;
+  background: rgb(0, 0, 0, 0.2);
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0%;
+  left: 0%;
+  z-index: 2;
+  opacity: 0;
+}
+
+.item:hover:after {
+  opacity: 1;
+}
+
+.item:hover .imgBox img {
+  transform: scale(1.1);
+  filter: blur(3px);
+}
+
+.item:hover .textBox__name {
+  opacity: 1;
+  transform: translateY(0);
+}
+
+.item:hover .textBox__price {
+  opacity: 1;
+  transform: translateY(0);
+}
+
+.item:after,
+.item .imgBox img,
+.item .textBox__name {
+  transition: all 0.4s ease-in-out;
+}
+
+.item .textBox__price {
+  transition: all 0.4s ease-in-out 0.15s;
 }
