--- a/my-shop/index.css
+++ b/my-shop/index.css
@@ -27,7 +27,10 @@ header {
   align-items: center;
   background-image: url("./img/banner.jpg");
   background-size:  cover;
-  
+}
+
+header span {
+  text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.3);
 }
 
 container {
