--- a/my-shop/index.css
+++ b/my-shop/index.css
@@ -31,6 +31,22 @@ header {
 
 header span {
   text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.3);
+  animation: titleText 1s ease-in-out;
+}
+
+@keyframes titleText {
+  0% {
+    transform: translateY(70px);
+    opacity: 0;
+  }
+  
+  92% {
+    transform: translateY(-10px);
+  }
+  100% {
+    transform: translateY(0);
+    opacity: 1;
+  }
 }
 
 container {
