--- a/my-shop/index.css
+++ b/my-shop/index.css
@@ -73,13 +73,20 @@ container {
   display: flex;
   flex-direction: column;
   justify-content: space-evenly;
+  align-items: flex-start;
   padding: 30px;
   margin-bottom: 20px;
 }
 
-.menu {
-  padding: 7px;
+.menu .admin {
   width: 100%;
+  max-width: 150px;
+}
+
+.menu {
+  border: 1px solid red;
+  width: 100%;
+  padding: 7px;
   border-radius: 10px;
   transition: background-color 1s ease-in-out 0.5s;
   transition: transform 1s ease-in-out;
@@ -94,7 +101,6 @@ container {
 .admin {
   background-color: black;
   color: white;
-  width: 100%;
   height: 5%;
   display: flex;
   justify-content: flex-start;
